[tool.poetry]
name = "key-value-database-performance-testing"
version = "0.1.0"
description = ""
authors = ["niranjani <ingaleniranjan365@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
h5py = "^3.8.0"
numpy = "^1.24.2"
pyspark = "^3.3.2"
findspark = "^2.0.1"
hdf5plugin = "^4.1.1"
fastparquet = "^2023.2.0"
pyarrow = "^12.0.0"
joblib = "^1.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
